--- a/css/signUp.css
+++ b/css/signUp.css
@@ -24,12 +24,10 @@ ul,li{
 }
 
 /* 헤더 */
-.header {
-    width: 100%;
-    height: 220px;
-
+.header {    
     position: relative;
     width: 100%;
+    height: 180px;
     margin: 0 auto;
 }
 
@@ -105,9 +103,9 @@ ul {
 
 /* container */
 #wrapper .container {
-    width: 1150px;
-    margin: 0 auto;
-    padding: 0 50px;
+    width: 430px;
+    margin: 70px auto;
+    margin-bottom: 80px;
 }
 footer .container {
     width: 970px;
@@ -123,125 +121,160 @@ footer .container {
 }
 
 .subMenu{
-    display: inline-block;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 .subTitle{
     position: relative;
+    text-align: center;
+
     font-style: normal;
     font-weight: 600;
-    font-size: 22px;
+    font-size: 25px;
     color: black;
 }
 
-.userName {
-    position: relative;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 22px;
-    color: black;
-}
+/* main */
+#main {
+    box-sizing: border-box;
+    padding: 0px 30px 0 30px;
 
-.exerciseBox {
-    position: relative;
-    width: 160px;
-    height: 350px;
-    padding: 4px;
-    margin: 10px 10px 30px 0;
+    height: auto;
     background: #FFFFFF;
-    border: 1.3px solid #909090;
+    /* border: 1px solid #909090; */
+    border-bottom: 0;
+}
+
+#subTitle .subTitle {
+    position: relative;
+
+    font-style: normal;
+    font-weight: 700;
+    font-size: 28px;
+    margin-bottom: 50px;
+
+    color: #414141;
+}
+
+.flex-container2 {
+    display: flex;
+    flex-direction: column;
+}
+
+.inputId {
+    display: block;
+    width: 360px;
+
+    border: none;
+    border-bottom: 1px solid #B5B5B5;
+    outline: none; /* 입력 시 테두리 지움*/
+    display: block;
+    
+    font-weight: 500;
+    font-size: 14px;
+    color: #909090;
+
+    margin-bottom: 25px;
+    padding-bottom: 10px;
+}
+
+.inputPW {
+    display: block;
+    width: 360px;
+
+    border: none;
+    border-bottom: 1px solid #B5B5B5;
+    outline: none; /* 입력 시 테두리 지움*/
+    
+    font-weight: 500;
+    font-size: 14px;
+    color: #909090;
+
+    margin-bottom: 25px;
+    padding-bottom: 10px;
+}
+
+.inbodyBox {
+    display: block;
+    width: 360px;
+
+    border: none;
+    
+    font-weight: 500;
+    font-size: 14px;
+    color: #909090;
+
+    margin-bottom: 10px;
+    padding-bottom: 10px;
+}
+
+.box {
+    display: inline-block;
+}
+
+.inputInbody {
+    display: inline-block;
+    width: 180px;
+
+    border: none;
+    border-bottom: 1px solid #B5B5B5;
+    outline: none; /* 입력 시 테두리 지움*/
+    
+    font-weight: 500;
+    font-size: 14px;
+    color: #909090;
+
+    margin-bottom: 25px;
+    padding-bottom: 10px;
+}
+
+
+/* placeholder 폰트 색 변경, 크롬/엣지 둘 다 적용 */
+input::placeholder{color: #909090;}
+input::-webkit-input-placeholder {color: #909090;}
+input::-ms-input-placeholder{color: #909090;}
+
+.alert {
+    display: none;
+    width: 360px;
+    border: none;
+
+    background-color: #FFFFFF;
+    font-size: 11px;
+    font-weight: 400;
+    
+    padding-left: 5px;
+}
+
+#login_btn {
+    background: linear-gradient(91.36deg, #329632 -24.31%, #a8eb8b 130.3%);
+    box-shadow: 0px -10px 40px rgba(156, 194, 255, 0.3);
     border-radius: 12px;
-}
-
-.exerciseRecord {
-    position: relative;
-    width: 130px;
-    height: 100px;
-    /* padding: 15px; */
-    margin: 10px;
-    background: #FFFFFF;
-    border: 1.3px solid #909090;
-    /* border-radius: 12px; */
-}
-
-.newMemRecord {
+    border: none;
+    color: white;
+    text-align: center;
     display: inline-block;
-    position: relative;
-    width: 195px;
-    height: 145px;
-    /* padding: 15px; */
-    margin: 10px;
-    background: #FFFFFF;
-    border: 1.3px solid #909090;
-    border-radius: 12px;
-}
-
-.userBox {
-    position: relative;
-    width: 270px;
-    height: 350px;
-    padding: 15px;
-    margin: 10px 30px 30px 0;
-    background: #FFFFFF;
-    border: 1.3px solid #909090;
-    border-radius: 12px;
-}
-
-.newMemberBox {
-    position: relative;
-    width: 685px;
-    height: 200px;
-    padding: 15px;
-    margin: 10px 30px 30px 0;
-    background: #FFFFFF;
-    border: 1.3px solid #909090;
-    border-right: none;
-    border-left: none;
-    /* border-radius: 12px; */
-}
-
-.exerciseList {
-    display: inline-block;
-}
-
-.newMemberList {
-    display: inline-block;
-}
-
-.newMemberTitle {
-    position: relative;
-    font-style: normal;
+    font-size: 18px;
     font-weight: 600;
-    font-size: 22px;
-    color: black;
+
+    width: 370px;
+    padding: 12px 0;
+    cursor: pointer;
+    /* margin: 20px 0 0 -31px; */
 }
 
-.rank5 {
-    position: relative;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 22px;
-    color: black;
+/* 회원가입*/
+.findinfo{
+    text-align: center;
+    margin: 30px 30px 80px 30px;
+    font-size: 11px;
+    color: #919191;
 }
-
-.rank5List {
-    display: inline-block;
-    margin-left: 10px;
-}
-
-.rank5Box {
-    position: relative;
-    width: 270px;
-    height: 350px;
-    padding: 15px;
-    margin: 10px 30px 30px 0;
-    background: #FFFFFF;
-    border: 1.3px solid #909090;
-    /* border-radius: 12px; */
-}
-
-.userMain {
-    display: inline-block;
-    margin-left: 30px;
+.signUPTxt {
+    color: #919191;
+    padding: 0 10px;
+    font-weight: 500;
 }
 
 /*footer*/
