--- a/css/logIn.css
+++ b/css/logIn.css
@@ -1,10 +1,15 @@
-@import url(//fonts.googleapis.com/earlyaccess/notosanskr.css);
+/* @import url(//fonts.googleapis.com/earlyaccess/notosanskr.css); */
+/* @import url(//fonts.googleapis.com/earlyaccess/jejugothic.css); */
+/* @import url(//fonts.googleapis.com/earlyaccess/jejuhallasan.css); */
+@import url(//fonts.googleapis.com/earlyaccess/jejumyeongjo.css);
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Noto Sans KR';
+    /* font-family: 'Jeju Gothic', sans-serif; */
+    /* font-family: 'Jeju Hallasan', cursive; */
+    font-family: 'Jeju Myeongjo', serif;
 }
 html, body {
     height: 100%;
@@ -25,9 +30,9 @@ ul,li{
 
 /* 헤더 */
 .header {    
-    position: relative;
     width: 100%;
-    height: 180px;
+    height: 230px;
+    position: relative;
     margin: 0 auto;
 }
 
@@ -57,7 +62,8 @@ ul {
     margin-right: 15px;
 }
 #userMenu .link:hover{
-    color: #329632;
+    color: #556B2F;
+    font-weight: 600;
 }
 #userMenu:after{
     content: "";
@@ -72,40 +78,40 @@ ul {
 /* gnb */
 .gnb_main {
     width: 100%;
-    margin: 30px auto; 
+    margin: 40px auto; 
     margin-bottom: 0;
     border-right: none;
     border-left: none;
-    box-shadow: 0 1px 5px 0 rgba(33, 120, 44, 0.2);
+    box-shadow: 0 1px 5px 0 #D3D3D3;
 }
 .gnb{
     text-align: center;
-    padding: 8px 0;
+    padding: 10px 0;
     margin: 0;
 }
 .gnb li {
     display: inline;
-    margin: 0 15px;
+    margin: 0 10px;
 }
 .gnb a {
     display: inline-block;
 
     width: 140px;
-    font-size: 14px;
+    font-size: 15px;
     font-weight: 500;
     color: black;
     margin: 0;
 }
 .link:hover {
-    color: #329632;
-    font-weight: 700;
+    color: #556B2F;
+    font-weight: 800;
 }
 
 /* container */
 #wrapper .container {
     width: 430px;
-    margin: 70px auto;
-    margin-bottom: 20px;
+    margin: 0 auto;
+    margin-bottom: 80px;
 }
 footer .container {
     width: 970px;
@@ -117,7 +123,7 @@ footer .container {
     display: block;
     width: 200px;
     margin: 0 auto;
-    color:black;
+    color: 	#556B2F;
 }
 
 .subMenu{
@@ -214,8 +220,8 @@ input::-ms-input-placeholder{color: #909090;}
 }
 
 #login_btn {
-    background: linear-gradient(91.36deg, #329632 -24.31%, #a8eb8b 130.3%);
-    box-shadow: 0px -10px 40px rgba(156, 194, 255, 0.3);
+    background: linear-gradient(91.36deg, #556B2F -24.31%, #a8eb8b 130.3%);
+    box-shadow: 0px -10px 40px rgba(#556B2F, 0.3);
     border-radius: 12px;
     border: none;
     color: white;
@@ -266,7 +272,7 @@ footer a {
     font-weight: 500;
 }
 #fit_footer {
-    font-family: 'Montserrat';
+    font-family: 'Jeju Myeongjo';
     font-size: 25px;
     margin: 0;
     font-weight: 600;
