--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,15 @@
-@import url(//fonts.googleapis.com/earlyaccess/notosanskr.css);
+@import url(//fonts.googleapis.com/earlyaccess/jejumyeongjo.css);
+
+/* 색상 */
+/* lightgrey: 	#D3D3D3 */
+/* darkolivegreen: #556B2F */
+/* #909090 */
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Noto Sans KR';
+    font-family: 'Jeju Myeongjo', serif;
 }
 html, body {
     height: 100%;
@@ -13,7 +18,6 @@ html, body {
 
 body {
     background-color: white;
-   /* background-image: linear-gradient(rgb(89,208,255), rgb(255,255,255)); */
 }
 
 a{
@@ -26,10 +30,8 @@ ul,li{
 /* 헤더 */
 .header {
     width: 100%;
-    height: 220px;
-
+    height: 230px;
     position: relative;
-    width: 100%;
     margin: 0 auto;
 }
 
@@ -59,7 +61,8 @@ ul {
     margin-right: 15px;
 }
 #userMenu .link:hover{
-    color: #329632;
+    color: #556B2F;
+    font-weight: 600;
 }
 #userMenu:after{
     content: "";
@@ -74,33 +77,34 @@ ul {
 /* gnb */
 .gnb_main {
     width: 100%;
-    margin: 30px auto; 
+    margin: 40px auto; 
     margin-bottom: 0;
     border-right: none;
     border-left: none;
-    box-shadow: 0 1px 5px 0 rgba(33, 120, 44, 0.2);
+    /* background-color: #329632; */
+    box-shadow: 0 1px 5px 0 #D3D3D3;
 }
 .gnb{
     text-align: center;
-    padding: 8px 0;
+    padding: 10px 0;
     margin: 0;
 }
 .gnb li {
     display: inline;
-    margin: 0 15px;
+    margin: 0 10px;
 }
 .gnb a {
     display: inline-block;
 
     width: 140px;
-    font-size: 14px;
+    font-size: 15px;
     font-weight: 500;
     color: black;
     margin: 0;
 }
 .link:hover {
-    color: #329632;
-    font-weight: 700;
+    color: #556B2F;
+    font-weight: 800;
 }
 
 /* container */
@@ -118,8 +122,12 @@ footer .container {
 .logo{
     display: block;
     width: 200px;
-    margin: 0 auto;
-    color:black;
+    margin: 0px auto;
+    margin-bottom: 0;
+    /* color:black; */
+    /* color: #329632; */
+    /* color: 	#006400; */
+    color: 	#556B2F;
 }
 
 .subMenu{
@@ -148,7 +156,8 @@ footer .container {
     padding: 4px;
     margin: 10px 10px 30px 0;
     background: #FFFFFF;
-    border: 1.3px solid #909090;
+    /* border: 1.3px solid #909090; */
+    border: 1.3px solid #D3D3D3;
     border-radius: 12px;
 }
 
@@ -159,7 +168,7 @@ footer .container {
     /* padding: 15px; */
     margin: 10px;
     background: #FFFFFF;
-    border: 1.3px solid #909090;
+    border: 1.3px solid #D3D3D3;
     /* border-radius: 12px; */
 }
 
@@ -267,7 +276,7 @@ footer a {
     font-weight: 500;
 }
 #fit_footer {
-    font-family: 'Montserrat';
+    font-family: 'Jeju Myeongjo';
     font-size: 25px;
     margin: 0;
     font-weight: 600;
