--- a/css/signUp.css
+++ b/css/signUp.css
@@ -1,10 +1,10 @@
-@import url(//fonts.googleapis.com/earlyaccess/jejumyeongjo.css);
+@import url(https://cdn.jsdelivr.net/gh/moonspam/NanumSquare@1.0/nanumsquare.css);
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Jeju Myeongjo', serif;
+    font-family: 'NanumSquare', san-serif;
 }
 html, body {
     height: 100%;
@@ -13,7 +13,6 @@ html, body {
 
 body {
     background-color: white;
-   /* background-image: linear-gradient(rgb(89,208,255), rgb(255,255,255)); */
 }
 
 a{
@@ -117,8 +116,10 @@ footer .container {
 .logo{
     display: block;
     width: 200px;
-    margin: 0 auto;
-    color: 	#556B2F;
+    font-weight: 700;
+    margin: 0px auto;
+    margin-bottom: 0;
+    color: 	#556B2F; 
 }
 
 .subMenu{
@@ -301,7 +302,6 @@ footer a {
     font-weight: 500;
 }
 #fit_footer {
-    font-family: 'Jeju Myeongjo';
     font-size: 25px;
     margin: 0;
     font-weight: 600;
